add post content, change db

--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using Freelancer_s_Web.Commons
+@using System.Reflection.Metadata
 @model Freelancer_s_Web.Pages.PostPage.DetailsModel
 
 @{
@@ -93,23 +94,60 @@
                 }
     </dl>
 </div>
-
+<div class="col-md-4">
+        aspd
+        @if (Model.isAuthor)
+        {
+        <form method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" name="postId" value="@Model.Post.Id" />
+            <p>Upload audio, pdf, image, video</p>
+            <div class="form-group">
+                <input asp-for="FileUpload.FormFile" type="file" required/>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Add new file" class="btn btn-primary" />
+            </div>
+        </form>
+        }
+    </div>
 <div style="float:left; width:100%; margin-bottom:30px">
     <h3>Contents</h3>
     <hr />
     @foreach(var pc in Model.postContents)
     {
-        if (pc.Type == CommonEnums.POST_CONTENT_TYPE.IMAGE)
+        if (CommonEnums.POST_CONTENT_TYPE.IMAGE.Contains(pc.Type))
         {
-            <img src="@pc.Url" alt="" style="float:left;">
+            <div class="img">
+                <img src="data:@pc.Type;base64,@pc.FileBase64" alt="" style="float:left;">
+            </div>
+        }
+        else if (CommonEnums.POST_CONTENT_TYPE.VIDEO.Contains(pc.Type))
+        {
+            <div class="vid">
+                <video src="data:@pc.Type;base64,@pc.FileBase64" style="width:70%; height:500px; float:left;" controls>
+                </video>
+            </div>
+        }
+        else if (CommonEnums.POST_CONTENT_TYPE.PDF.Contains(pc.Type))
+        {
+            <div class="img">
+                <embed src="data:@pc.Type;base64,@pc.FileBase64"/>
+            </div>
+        }
+        else if (CommonEnums.POST_CONTENT_TYPE.AUDIO.Contains(pc.Type))
+        {
+            <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay">
+                <source src="data:@pc.Type;base64,@pc.FileBase64"/>
+            </audio>
         }
         else
         {
-            <video style="width:70%; height:500px; float:left;" control>
-                <source src="@pc.Url" type="video/mp4">
-            </video>
+            <p>Cannot read file.</p>
         }
     }
+    
+    
 </div>
 
 <div class="row">
