--- a/Freelancer-s-Web/Pages/ReportPage/ReportedList.cshtml
+++ b/Freelancer-s-Web/Pages/ReportPage/ReportedList.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model Freelancer_s_Web.Pages.ReportPage.IndexModel
+@model Freelancer_s_Web.Pages.ReportPage.ReportedListModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reported";
 }
 
 <h1>Index</h1>
