--- a/Freelancer-s-Web/Pages/ApplicationPages/Create.cshtml
+++ b/Freelancer-s-Web/Pages/ApplicationPages/Create.cshtml
@@ -16,7 +16,7 @@
             <input type="hidden" name="postId" value="@Model.Post.Id" />
             <div class="form-group">
                 <label asp-for="ApplicationForm.Cv" class="control-label"></label>
-                <input asp-for="FileUpload.FormFile" type="file" accept="application/pdf>
+                <input asp-for="FileUpload.FormFile" type="file" accept="application/pdf" required/>
                 <span asp-validation-for="ApplicationForm.Cv" class="text-danger"></span>
             </div>
             <div class="form-group">
