--- a/Freelancer-s-Web/Pages/PostPage/Edit.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Edit.cshtml
@@ -14,9 +14,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Post.UserId" class="control-label"></label>
-                <select asp-for="Post.UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="Post.UserId" class="text-danger"></span>
+                <label asp-for="Post.User" class="control-label"></label>
+                <input asp-for="Post.UserId" class="form-control" type="hidden" value="ViewBag.UserId"/>
+                <p>@Model.Post.User.DisplayName</p>
             </div>
             <div class="form-group">
                 <label asp-for="Post.Title" class="control-label"></label>
@@ -29,8 +29,7 @@
                 <span asp-validation-for="Post.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Post.Status" class="control-label"></label>
-                <input asp-for="Post.Status" class="form-control" />
+                <input asp-for="Post.Status" class="form-control" type="hidden" />
                 <span asp-validation-for="Post.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,29 +39,17 @@
             </div>
             <input type="hidden" asp-for="Post.Id" />
             <div class="form-group">
-                <label asp-for="Post.CreatedAt" class="control-label"></label>
-                <input asp-for="Post.CreatedAt" class="form-control" />
+                <input asp-for="Post.CreatedAt" class="form-control" type="hidden"/>
                 <span asp-validation-for="Post.CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.UpdatedAt" class="control-label"></label>
-                <input asp-for="Post.UpdatedAt" class="form-control" />
-                <span asp-validation-for="Post.UpdatedAt" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Post.IsDeleted" /> @Html.DisplayNameFor(model => model.Post.IsDeleted)
+                    <input class="form-check-input" asp-for="Post.IsDeleted" type="hidden"/>
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Post.CreatedBy" class="control-label"></label>
-                <input asp-for="Post.CreatedBy" class="form-control" />
+                <input asp-for="Post.CreatedBy" class="form-control" type="hidden"/>
                 <span asp-validation-for="Post.CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.UpdatedBy" class="control-label"></label>
-                <input asp-for="Post.UpdatedBy" class="form-control" />
-                <span asp-validation-for="Post.UpdatedBy" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
