--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -31,21 +31,38 @@
      color: black;
      font-weight: bold;
      }
+
+     #ava-cmt{
+         width:100% ;
+         height:100%;
+     }
+
+     #buttong{
+         margin-left:440px;
+         float:right;
+         background-color: blueviolet;
+         color:white;
+     }
+
+     #btn-person{
+     background-color:white;
+     border:none;
+     }
     </style>
 </head>
 
-<h1>Details</h1>
+<h1>@Model.Post.Title</h1>
 
 <div>
-    <h4>Post</h4>
+    <h4>Post Detail</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.Title)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Post.Title)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.Major)
         </dt>
@@ -113,21 +130,52 @@
 </div>
 
 <div class="row">
-            <div class="col-sm-5 col-md-6 col-12 pb-4">
+            <div class="col-sm-8">
                 <h3>Comments</h3>
                 <hr />
+
+                <form>
+                	<h2>New Comment</h2>
+                	
+                    <fieldset>
+                        <div class="row">
+                            <div class="col-sm-10 col-lg-2 hidden-xs">
+                            	<img src="@Model.User.Avatar" alt="" class="rounded-circle" id="ava-cmt">
+                            </div>
+                            <div class="form-group col-xs-12 col-sm-9 col-lg-10">
+                                <textarea asp-for="comment.Content" class="form-control" id="message" placeholder="Your comment"></textarea>
+                            </div>
+                        </div>  	
+                    </fieldset>
+                    <button type="submit" class="btn btn-normal pull-right" id="buttong">Comment</button>
+                </form>
+
                 @foreach(var item in Model.comments) {
+                    if(item.UserId == @Model.User.Id){
+                    <div class="comment mt-4 text-justify float-left">
+                    <img src="@item.User.Avatar" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>@item.User.DisplayName</h4>
+                    <br>
+                    <span> @item.CreatedAt</span>
+                    <br>
+                    <p>@item.Content</p>
+                    </div>
+                    <br>
+                    <button id="btn-person">Edit</button> <button id="btn-person">Delete</button>
+                    }else{
                 <div class="comment mt-4 text-justify float-left">
                     <img src="@item.User.Avatar" alt="" class="rounded-circle" width="40" height="40">
                     <h4>@item.User.DisplayName</h4>
-                    <span>- @item.CreatedAt</span>
+                    <br>
+                    <span> @item.CreatedAt</span>
                     <br>
                     <p>@item.Content</p>
                 </div>
+                    }
                 }
             </div>
 </div>
-
+<br>
 <div>
    @* <a asp-page="./Edit" asp-route-id="@Model.Post.Id">Edit</a>
     <a asp-page="./Index">Back to List</a>*@
