--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@ ViewData["Title"] = "Home page";
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="w-100 p-3">
             @RenderBody()
         </main>
     </div>
