--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -35,64 +35,23 @@
     </style>
 </head>
 
-<h1>Details</h1>
+<h1>@Html.DisplayFor(model => model.Post.Title)</h1>
 
 <div>
-    <h4>Post</h4>
+    <div class="d-flex flex-row">
+        <p> @Html.DisplayNameFor(model => model.Post.Major): @Html.DisplayFor(model => model.Post.Major.Name)</p>
+        <p class="mx-5">@Html.DisplayFor(model => model.Post.CreatedAt)</p>
+        <a class="text-dark ml-auto" asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@Model.Post.UserId"> <img class="rounded-circle mx-1 border" src="@Model.Post.User.Avatar" width="27" height="27" />@Html.DisplayFor(model => model.Post.User.DisplayName)</a>
+    </div>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.Major)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Major.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.User)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.User.DisplayName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.CreatedAt)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.CreatedAt)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.Description)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Post.Description)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Post.Status)
-        </dt>
-            @if (@Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
-                {
-                    <dd class="col-sm-10">
-                       @Html.DisplayName("PUBLIC")
-                    </dd>
-                }
-                else if (@Model.Post.Status == CommonEnums.POST_STATUS.PRIVATE)
-                {
-                    <dd class="col-sm-10">
-                       @Html.DisplayName("PRIVATE")
-                    </dd>
-                }
-                else
-                {
-                    <dd class="col-sm-10">
-                       @Html.DisplayName("REMOVE")
-                    </dd>
-                }
-    </dl>
+        </dl>
 </div>
 <div class="col-md-4">
         @if (Model.isAuthor)
