remove message image, update message

--- a/Freelancer-s-Web/Pages/Message/ChatRoom.cshtml
+++ b/Freelancer-s-Web/Pages/Message/ChatRoom.cshtml
@@ -3,39 +3,6 @@
 @{
     
 }
-@*<div class="container">
-    @{
-        foreach (var item in Model.Conversation)
-        {
-            if (item.Key.Id == Model.currentUserID)
-            {
-                <div class="row my-3">
-                    <div class="col-2">
-                        <img src="@item.Key.Avatar" width="50" height="50">
-                    </div>
-                    <div class="col-6 border border-2">
-                        <p>@item.Value.Content</p>
-                    </div>
-                </div>
-            }
-            else
-            {
-                <div class="row my-3 d-flex justify-content-end">
-                    <div class="col-6 border border-2">
-                        <p>@item.Value.Content</p>
-                    </div>
-                    <div class="col-2">
-                        <img src="@item.Key.Avatar" width="50" height="50">
-                    </div>
-                </div>
-            }
-
-        }
-    }
-    <input type="text" id="message" />
-    <input type="button" id="sendmessage" value="Send" />
-</div>*@
-
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
@@ -59,18 +26,17 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <ul id="messagesList" class="d-flex flex-column" style="list-style-type: none; overflow: scroll; max-height: 500px"></ul>
+        <ul id="messagesList" class="d-flex flex-column" style="list-style-type: none; overflow: auto; max-height: 50vh"></ul>
     </div>
 </div>
-
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/site.js"></script>
     <script>
+$(() => { 
     var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build();
 
     connection.on("GetMessagesResponse", function (res) {
-        //console.log("GetMessagesResponse");
-        console.log(res);
         var userId = document.getElementById("userInput").value;
         document.getElementById("messagesList").innerHTML = ""
 
@@ -79,11 +45,13 @@
 
         res.forEach(item => {
             var li = document.createElement("li");
+            li.style.maxWidth = "50vw";
+            li.style.overflow = "auto";
             const [dateValues, timeValues] = item.value.createdAt.split('T');
             const [hh, mm, ss] = timeValues.split(':')
 
             if (item.value.receiverId == userId) {
-                li.innerHTML = `<img src="${item.key.avatar}" width="25" height="25" class="rounded-circle mx-1 border">` + ": " + item.value.content + `<br>` + " [" + `${dateValues} ${hh}:${mm}` + (item.value.isSeen ? " Seen" : " Not seen") + "] ";
+                li.innerHTML = `<img src="${item.key.avatar}" width="25" height="25" class="rounded-circle mx-1 border">` + ": " + item.value.content + `<br>` + " [" + `${dateValues} ${hh}:${mm}]`;
             }
             else {
                 li.classList.add("ml-auto");
@@ -92,12 +60,6 @@
 
             document.getElementById("messagesList").appendChild(li);
         })
-        @*$.each(res, (item) => {
-            var li = document.createElement("li");
-            li.textContent = " [" + item.value.createdAt + "] "+ item.key + ": " + item.value.content;
-            document.getElementById("messagesList").appendChild(li);
-        })*@
-
     });
 
     connection.start().then(() => {
@@ -119,4 +81,6 @@
             return console.error(err.toString());
         });
     })
+})
+    
     </script>
