--- a/Freelancer-s-Web/Pages/UserPage/Index.cshtml
+++ b/Freelancer-s-Web/Pages/UserPage/Index.cshtml
@@ -49,7 +49,7 @@
                         <img class="rounded-circle mx-1 border" src="@item.Avatar" width="27" height="27" />
                     </td>
                     <td class="title">
-                        <a asp-page="./Details" asp-route-id="@item.Id">  @Html.DisplayFor(modelItem => item.Email)</a>
+                        <a asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Email)</a>
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Address)
