Delete moti, mess img, isSeen column in mess and related ones

--- a/Freelancer-s-Web/Pages/Message/Delete.cshtml
+++ b/Freelancer-s-Web/Pages/Message/Delete.cshtml
@@ -18,12 +18,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Message.Content)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Message.IsSeen)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Message.IsSeen)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Message.Receiver)
         </dt>
