--- a/Freelancer-s-Web/Pages/Message/Edit.cshtml
+++ b/Freelancer-s-Web/Pages/Message/Edit.cshtml
@@ -28,11 +28,11 @@
                 <input asp-for="Message.Content" class="form-control" />
                 <span asp-validation-for="Message.Content" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            @*<div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Message.IsSeen" /> @Html.DisplayNameFor(model => model.Message.IsSeen)
                 </label>
-            </div>
+            </div>*@
             <input type="hidden" asp-for="Message.Id" />
             <div class="form-group">
                 <label asp-for="Message.CreatedAt" class="control-label"></label>
