--- a/Freelancer-s-Web/Pages/CommentPage/Edit.cshtml
+++ b/Freelancer-s-Web/Pages/CommentPage/Edit.cshtml
@@ -13,6 +13,13 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="comment.Id" />
+            <input type="hidden" asp-for="comment.CreatedAt" />
+            <input type="hidden" asp-for="comment.CreatedBy" />
+            <input type="hidden" asp-for="comment.UpdatedAt" />
+            <input type="hidden" asp-for="comment.UpdatedBy" />
+            <input type="hidden" asp-for="comment.UserId" />
+            <input type="hidden" asp-for="comment.PostId" />
+            <input type="hidden" asp-for="comment.IsDeleted" />
             <div class="form-group">
                 <label asp-for="comment.Content" class="control-label"></label>
                 <input asp-for="comment.Content" class="form-control" />
