--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -157,7 +157,7 @@
                 <h3>Comments</h3>
                 <hr />
                 	<h2>New Comment</h2>
-                	
+                	<form method="post">
                     <fieldset>
                         <div class="row">
                             <div class="col-sm-10 col-lg-2 hidden-xs">
@@ -169,7 +169,7 @@
                         </div>  	
                     </fieldset>
                     <button type="submit" class="btn btn-normal pull-right" id="buttong">Comment</button>
-
+                    </form>
                 @foreach(var item in Model.comments) {
                     if(item.UserId == @Model.User.Id){
                     
