add admin list forms

--- a/Freelancer-s-Web/Pages/PostPage/Index.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Index.cshtml
@@ -90,6 +90,8 @@
                 {
                     <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>   
                 }
+                <br>
+                <a asp-page="./ListForm" asp-route-id="@item.Id">Forms</a>
             </td>
         </tr>
 }
