Huymg/fix merge (#21)
* Add comment create, update

* Add update delete page

* Fix bug update delete

* Delete moti, mess img, isSeen column in mess and related ones

* fix

* Fix create cmt

* Merge conflict resolve #1

Co-authored-by: Triet0211 <90385862+Triet0211@users.noreply.github.com>

--- a/Freelancer-s-Web/Pages/PostPage/Create.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Create.cshtml
@@ -14,6 +14,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Post.UserId" class="control-label"></label>
                 <input asp-for="Post.UserId" type="hidden" value="ViewBag.UserId"/>
             </div>
             <div class="form-group">
@@ -38,7 +39,7 @@
 </div>
 
 <div>
-    <a asp-page="/HomePage/Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
