--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -73,7 +73,7 @@
 <div class="col-md-4">
         @if (Model.isAuthor)
         {
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" asp-page-handler="Upload" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="postId" value="@Model.Post.Id" />
             <p>Upload audio, pdf, image, video</p>
@@ -161,7 +161,7 @@
                     <fieldset>
                         <div class="row">
                             <div class="col-sm-10 col-lg-2 hidden-xs">
-                            	<img src="@Model.User.Avatar" alt="" class="rounded-circle" id="ava-cmt">
+                            	<img src="@Model.LoginUser.Avatar" alt="" class="rounded-circle" id="ava-cmt">
                             </div>
                             <div class="form-group col-xs-12 col-sm-9 col-lg-10">
                                 <textarea asp-for="comment.Content" class="form-control" id="message" placeholder="Your comment"></textarea>
@@ -171,7 +171,7 @@
                     <button type="submit" class="btn btn-normal pull-right" id="buttong">Comment</button>
                     </form>
                 @foreach(var item in Model.comments) {
-                    if(item.UserId == @Model.User.Id){
+                    if(item.UserId == @Model.LoginUser.Id){
                     
                     <div class="comment mt-4 text-justify float-left">
                     <img src="@item.User.Avatar" alt="" class="rounded-circle" width="40" height="40">
