--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -157,7 +157,7 @@
                 <h3>Comments</h3>
                 <hr />
                 	<h2>New Comment</h2>
-                	<form method="post">
+                	<form method="post" asp-page-handler="Comment">
                     <fieldset>
                         <div class="row">
                             <div class="col-sm-10 col-lg-2 hidden-xs">
@@ -165,8 +165,9 @@
                             </div>
                             <div class="form-group col-xs-12 col-sm-9 col-lg-10">
                                 <textarea asp-for="comment.Content" class="form-control" id="message" placeholder="Your comment"></textarea>
+                                <input asp-for="comment.PostId" value="@Model.Post.Id" type="hidden"/>
                             </div>
-                        </div>  	
+                        </div>
                     </fieldset>
                     <button type="submit" class="btn btn-normal pull-right" id="buttong">Comment</button>
                     </form>
